--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
     </a>
 
     <!-- Resume Download -->
-    <a href="https://github.com/Arihant1302/Potfolio-v2/blob/main/Arihant_Dhole_Resume.pdf"
+    <a href="./Arihant_Dhole_Resume.pdf"
        download
        class="w-12 h-12 rounded-xl bg-pink-500 text-white shadow-md flex items-center justify-center
               hover:bg-pink-600 hover:shadow-[0_0_20px_#ff8fcf80] hover:scale-110 
@@ -118,7 +118,7 @@
         <div class="flex items-center gap-5">
           <div class="flex-shrink-0">
             <div class="w-28 h-28 rounded-2xl overflow-hidden ring-1 ring-black/6 shadow-sm" aria-hidden="true">
-              <img src="https://github.com/Arihant1302/Potfolio-v2/blob/main/profile.png" alt="Arihant Dhole" class="w-full h-full object-cover"/>
+              <img src="./profile.png" alt="Arihant Dhole" class="w-full h-full object-cover"/>
             </div>
           </div>
 
@@ -323,3 +323,4 @@
 
  </body>
 </html>
+
