--- a/index.html
+++ b/index.html
@@ -330,49 +330,50 @@
 
           <div class="mt-4 grid grid-cols-2 sm:grid-cols-3 gap-2 text-xs sm:text-sm">
             <!-- ServiceNow -->
-            <div class="px-2 sm:px-3 py-2 rounded-lg bg-white/90 text-center flex items-center justify-center gap-2 card-hover">
+            <div class="px-2 sm:px-3 py-2 rounded-lg bg-white/90 text-center flex flex-col sm:flex-row items-center justify-center gap-2 card-hover">
               <svg class="w-4 sm:w-5 h-4 sm:h-5" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <rect x="3" y="3" width="18" height="18" rx="2" fill="#ffd0ea" stroke="#ff99cc" stroke-width="1.5"/>
                 <circle cx="12" cy="12" r="6" fill="none" stroke="#ff99cc" stroke-width="1.5"/>
                 <circle cx="12" cy="12" r="2" fill="#ff99cc"/>
               </svg>
-              <span class="hidden sm:inline">ServiceNow</span>
+              <span>ServiceNow</span>
             </div>
 
             <!-- Microsoft Office -->
-            <div class="px-2 sm:px-3 py-2 rounded-lg bg-white/90 text-center flex items-center justify-center gap-2 card-hover">
+            <div class="px-2 sm:px-3 py-2 rounded-lg bg-white/90 text-center flex flex-col sm:flex-row items-center justify-center gap-2 card-hover">
               <svg class="w-4 sm:w-5 h-4 sm:h-5" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <rect x="2" y="2" width="8" height="8" fill="#e5d0ff" stroke="#d0a8ff" stroke-width="1.5" rx="1"/>
                 <rect x="14" y="2" width="8" height="8" fill="#ffd0ea" stroke="#ff99cc" stroke-width="1.5" rx="1"/>
                 <rect x="2" y="14" width="8" height="8" fill="#ffd0ea" stroke="#ff99cc" stroke-width="1.5" rx="1"/>
                 <rect x="14" y="14" width="8" height="8" fill="#e5d0ff" stroke="#d0a8ff" stroke-width="1.5" rx="1"/>
               </svg>
-              <span class="hidden sm:inline">Office</span>
+              <span>Office</span>
             </div>
 
             <!-- Python -->
-            <div class="px-2 sm:px-3 py-2 rounded-lg bg-white/90 text-center flex items-center justify-center gap-2 card-hover">
+            <div class="px-2 sm:px-3 py-2 rounded-lg bg-white/90 text-center flex flex-col sm:flex-row items-center justify-center gap-2 card-hover">
               <svg class="w-4 sm:w-5 h-4 sm:h-5" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <path d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2z" fill="#ffd0ea" stroke="#ff99cc" stroke-width="1.5"/>
                 <path d="M12 6c1.1 0 2-.9 2-2s-.9-2-2-2-2 .9-2 2 .9 2 2 2zm0 12c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2z" fill="#ff99cc"/>
               </svg>
-              <span class="hidden sm:inline">Python</span>
+              <span>Python</span>
             </div>
 
             <!-- Power Automate -->
-            <div class="px-2 sm:px-3 py-2 rounded-lg bg-white/90 text-center flex items-center justify-center gap-2 card-hover">
+            <div class="px-2 sm:px-3 py-2 rounded-lg bg-white/90 text-center flex flex-col sm:flex-row items-center justify-center gap-2 card-hover">
               <svg class="w-4 sm:w-5 h-4 sm:h-5" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <path d="M3 12l3-3v6l-3-3zm9 0l3-3v6l-3-3zm9 0l3-3v6l-3-3z" fill="#e5d0ff" stroke="#d0a8ff" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
               </svg>
-              <span class="hidden sm:inline">Power Automate</span>
+              <span>Power Automate</span>
             </div>
+
             <!-- Windows/Mac -->
-            <div class="px-2 sm:px-3 py-2 rounded-lg bg-white/90 text-center flex items-center justify-center gap-2 card-hover">
+            <div class="px-2 sm:px-3 py-2 rounded-lg bg-white/90 text-center flex flex-col sm:flex-row items-center justify-center gap-2 card-hover">
               <svg class="w-4 sm:w-5 h-4 sm:h-5" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <rect x="2" y="3" width="20" height="14" rx="2" fill="none" stroke="#e5d0ff" stroke-width="1.5"/>
                 <path d="M2 17h20M7 20h10" stroke="#d0a8ff" stroke-width="1.5" stroke-linecap="round"/>
               </svg>
-              <span class="hidden sm:inline">Windows/Mac</span>
+              <span>Windows/Mac</span>
             </div>
 
           </div>
